--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ futures-core = "0.3"
 futures-util = "0.3"
 crossterm = "0.29.0"
 reedline = "0.44.0"
+octocrab = "0.49.3"
+dotenvy = "0.15.7"
 
 [dev-dependencies]
 wiremock = "0.6"
