--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,10 @@ crossterm = "0.29.0"
 reedline = "0.44.0"
 octocrab = "0.49.3"
 dotenvy = "0.15.7"
+dirs = "6"
+open = "5"
+keyring = { version = "3", features = ["apple-native"] }
+dialoguer = "0.11"
 
 [dev-dependencies]
 wiremock = "0.6"
