--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,10 @@ dirs = "6"
 open = "5"
 keyring = { version = "3", features = ["apple-native"] }
 dialoguer = "0.11"
+ratatui = "0.30"
+regex = "1"
+image = "0.25"
+ratatui-image = { version = "10.0.2", default-features = false, features = ["crossterm", "image-defaults"] }
 
 [dev-dependencies]
 wiremock = "0.6"
