feat: add assignees management with fuzzy matching
- Add list_assignees(), assign_issue(), unassign_issue() API methods
- Add TuiView::AssignUser with fuzzy matching suggestions
- Display assignees in list and detail views (magenta color)
- Add 'a' key in detail view to open assignee picker
- Add '-' key to unassign, arrows to navigate, Enter to assign
- Cache assignees when opening picker (lazy loading)
- Add wiremock tests for assign/unassign API
- Add fuzzy matching tests using SkimMatcherV2

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ ratatui = "0.30"
 regex = "1"
 image = "0.25"
 ratatui-image = { version = "10.0.2", default-features = false, features = ["crossterm", "image-defaults"] }
+fuzzy-matcher = "0.3.7"
 
 [dev-dependencies]
 wiremock = "0.6"
