feat: add Claude Code integration for issue dispatching
- Add agents module for session management, worktree handling, and Claude Code dispatch
- Add /agents CLI command with list, logs, kill, and clean subcommands
- Add TUI views for agent list, logs, and dispatch confirmation
- Add macOS notifications when agents complete
- Add local_path config option for project repositories

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,8 @@ regex = "1"
 image = "0.25"
 ratatui-image = { version = "10.0.2", default-features = false, features = ["crossterm", "image-defaults"] }
 fuzzy-matcher = "0.3.7"
+uuid = { version = "1.19.0", features = ["v4"] }
+chrono = { version = "0.4.42", features = ["serde"] }
 
 [dev-dependencies]
 wiremock = "0.6"
