--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,8 @@ ratatui-image = { version = "10.0.2", default-features = false, features = ["cro
 fuzzy-matcher = "0.3.7"
 uuid = { version = "1.19.0", features = ["v4"] }
 chrono = { version = "0.4.42", features = ["serde"] }
+portable-pty = "0.9.0"
+vt100 = "0.16.2"
 
 [dev-dependencies]
 wiremock = "0.6"
