--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ uuid = { version = "1.19.0", features = ["v4"] }
 chrono = { version = "0.4.42", features = ["serde"] }
 portable-pty = "0.9.0"
 vt100 = "0.16.2"
+openssl = { version = "0.10", features = ["vendored"] }
 
 [dev-dependencies]
 wiremock = "0.6"
