--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,11 +33,6 @@ jobs:
             os: ubuntu-latest
             binary_name: assistant
             asset_name: assistant-x86_64-unknown-linux-gnu
-          - target: aarch64-unknown-linux-gnu
-            os: ubuntu-latest
-            binary_name: assistant
-            asset_name: assistant-aarch64-unknown-linux-gnu
-            use_cross: true
           - target: x86_64-pc-windows-msvc
             os: windows-latest
             binary_name: assistant.exe
@@ -89,7 +84,7 @@ jobs:
         run: |
           mkdir -p release
           # macOS and Linux binaries
-          for target in x86_64-apple-darwin aarch64-apple-darwin x86_64-unknown-linux-gnu aarch64-unknown-linux-gnu; do
+          for target in x86_64-apple-darwin aarch64-apple-darwin x86_64-unknown-linux-gnu; do
             cp artifacts/assistant-${target}/assistant release/assistant-${target}
             chmod +x release/assistant-${target}
           done
